--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,6 @@ li {
 }
 
 .primary-font {
-    border: 2px solid red;
     font-size: var(--step-5);
     margin-bottom: 3rem;
     font-family: "Bebas Neue", sans-serif;
@@ -56,7 +55,9 @@ li {
 
 .container-header {
     background-color: var(--primary-background-color);
-    padding: 2.5em 2em;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-top: 1em;
 }
 
 .navbar {
@@ -64,6 +65,7 @@ li {
     align-items: center;
     flex-direction: column;
     margin-bottom: 2em;
+    border: 2px solid red;
 }
 
 .header-logo {
@@ -80,7 +82,8 @@ li {
 }
 
 .link {
-    color: var(--secondary-text-color)
+    color: var(--secondary-text-color);
+    text-decoration: none;
 }
 
 /* NAVBAR ============================================= */
@@ -91,7 +94,6 @@ li {
 }
 
 .header-title {
-    border: 2px solid red;
     color: var(--primary-text-color);
     text-align: center;
     justify-content: center;
