--- a/styles/style.css
+++ b/styles/style.css
@@ -55,51 +55,120 @@ li {
 
 .container-header {
     background-color: var(--primary-background-color);
-    padding-left: 2em;
-    padding-right: 2em;
-    padding-top: 1em;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 1rem;
 }
 
 .navbar {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 2em;
-    border: 2px solid red;
+    justify-content: space-between;
+    /* border: 2px solid red; */
 }
 
 .header-logo {
-        color: var(--primary-text-color)
+    align-self: center;
+    color: var(--primary-text-color);
 }
 
-.links {
+/* .header-logo.tertiary-font {
+    font-family: "Bebas Neue", sans-serif;
+} */
+
+
+.off-screen-menu {
+    height: 100vh;
+    width: 100vw;
+    max-width: 300px;
+    position: fixed;
+    top: 0;
+    right: -450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    transition: .3s ease;
+    background-color: var(--primary-background-color);
+}
+
+.off-screen-menu.active {
+    right: 0;
+}
+
+.ham-menu {
+    /* border: 2px solid greenyellow; */
+    height: 50px;
+    width: 50px;
+    position: relative;
+}
+
+.ham-menu span {
+    position: absolute;
+    /* border: 2px solid red; */
+    height: 5px;
+    width: 100%;
+    color: white;
+    border-radius: 25px;
+    top: 50%;
+    margin-top: -5px;
+    background-color: var(--secondary-text-color);
+}
+
+.ham-menu span:nth-child(1) {
+    top: 25%;
+}
+
+.ham-menu span:nth-child(3) {
+    top: 75%;
+}
+
+/* .ham-menu.active span:nth-child(1) {
+    top: 50%;
+    translate(-50%,-50%) rotate(45deg);
+}
+
+.ham-menu.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3) {
+    top: 50%;
+    transform: translate(-50%, 50%) rotate(-45deg);
+} */
+
+/* .links {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
     height: 50%;
     min-height: 6em;
-}
+} */
 
 .link {
     color: var(--secondary-text-color);
     text-decoration: none;
 }
 
-/* NAVBAR ============================================= */
+/* HEADER ============================================= */
 
 .header {
     flex-direction: column;
-    align-content:baseline
+    align-content:baseline;
+    margin-top: 3rem;
 }
 
 .header-title {
     color: var(--primary-text-color);
     text-align: center;
     justify-content: center;
+    border: 2px solid red;
+    margin-bottom: .75rem;
 }
 
 .header-p {
+    border: 2px solid red;
     margin-top: 0;
     justify-content: center;
 }
