--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+.space {
+    background-color: var(--primary-background-color);
+}
+
 
 li {
     list-style: none;
@@ -55,6 +59,7 @@ li {
 
 .container-header {
     background-color: var(--primary-background-color);
+    
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-top: 1rem;
@@ -64,13 +69,14 @@ li {
     justify-content: space-between;
     /* border: 2px solid red; */
     background-color: var(--primary-background-color);
+
+
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-top: 1rem;   
     position: sticky;
     top: 0;
-    transition: transform 0.2s;
-    
+    transition: transform 0.25s;
 }
 
 .nav-hidden {
@@ -80,6 +86,7 @@ li {
 .header-logo {
     align-self: center;
     color: var(--primary-text-color);
+    /* border: 2px solid red; */
 }
 
 /* .header-logo.tertiary-font {
@@ -88,22 +95,20 @@ li {
 
 
 .off-screen-menu {
+    margin-top: 1rem;
     height: 100vh;
-    width: 100vw;
-    max-width: 50%;
     position: fixed;
     top: 0;
-    right: -450px;
+    right: -100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-content: center;
     align-items: center;
     text-align: center;
     transition: .3s ease;
     background-color: var(--primary-background-color);
-    border-left: var(--secondary-text-color);
-    padd
+    padding: 3rem;
+    /* border: 2px solid red; */
 }
 
 .off-screen-menu.active {
@@ -112,15 +117,15 @@ li {
 
 .ham-menu {
     /* border: 2px solid greenyellow; */
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
 
 }
 
 .ham-menu span {
     position: absolute;
     /* border: 2px solid red; */
-    height: 5px;
+    height: 3px;
     width: 50px;
     color: white;
     border-radius: 25px;
