--- a/styles/style.css
+++ b/styles/style.css
@@ -62,12 +62,16 @@ button {
 
 /* NAVBAR ================================================== */
 
-.container-header {
-    background-color: var(--primary-background-color);
-    
+.container {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     padding-top: 1rem;
+    margin:0;
+}
+
+
+.container-header {
+    background-color: var(--primary-background-color);
 }
 
 .navbar {
@@ -90,8 +94,10 @@ button {
 
 .header-logo {
     align-self: center;
-    color: var(--primary-text-color);
+    color: var(--secondary-text-color);
     /* border: 2px solid red; */
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 1.75rem;
 }
 
 /* .header-logo.tertiary-font {
@@ -184,7 +190,7 @@ button {
     flex-direction: column;
     align-content:baseline;
     align-items: center;
-    margin-top: 1.5rem;
+    margin-top: 0
     /* border: 2px solid red; */
 }
 
