--- a/styles/meyer-reset.css
+++ b/styles/meyer-reset.css
@@ -30,6 +30,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	border: none;
+	margin: 0;
 }
 ol, ul {
 	list-style: none;
