--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@ li {
     
     --primary-text-color: #f9faf8;
     --secondary-text-color: #e5e7eb;
+    --sub-primary-text-color: #1f2937;
     --button-background-color: #3882f6;
 }
 
@@ -59,6 +60,15 @@ button {
     font-weight: 100;
     font-style: normal;
 }
+
+.quaternary-font {
+    font-size: var(--step-0);
+    color: var(--secondary-text-color);
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
+
 
 /* NAVBAR ================================================== */
 
@@ -107,7 +117,7 @@ button {
 
 .off-screen-menu {
     margin-top: 1rem;
-    height: 100vh;
+    height: auto;
     position: fixed;
     top: 0;
     right: -100%;
@@ -118,7 +128,9 @@ button {
     text-align: center;
     transition: .3s ease;
     background-color: var(--primary-background-color);
-    padding: 3rem;
+    padding: 2rem;
+    border-radius: 10px;
+
     /* border: 2px solid red; */
 }
 
@@ -202,6 +214,11 @@ button {
     margin-bottom: 1rem;
 }
 
+.header-image {
+    max-width: 100%;
+    margin-bottom: 1rem;
+}
+
 .header-p {
     /* border: 2px solid red; */
     margin-top: 0;
@@ -219,4 +236,47 @@ button {
     font-family: 'Roboto', sans-serif;
     color: var(--secondary-text-color);
     padding: .75rem 0;
+}
+
+/* SECTION 1 =================================================== */
+
+.container-section-1 {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.card-list {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.subtitle {
+    font-family: "Bebas Neue", sans-serif;
+    color: var(--sub-primary-text-color);
+    /* border: 2px solid red; */
+}
+
+.card {
+    flex-direction: column;
+    max-width: 300px;
+    /* border: 2px solid red; */
+        padding-right: min(1rem);
+
+}
+
+.card-img {
+    width: 100%;
+    border-radius: 25px;
+    max-height: 300px;
+    border: 2px solid var(--button-background-color);
+    margin-bottom: 1rem;
+}
+
+.card-description {
+    text-align: center;
+    color: black;
+    margin-bottom: 1rem;
 }
