--- a/styles/style.css
+++ b/styles/style.css
@@ -202,7 +202,8 @@ button {
     flex-direction: column;
     align-content:baseline;
     align-items: center;
-    margin-top: 0
+    margin-top: 0;
+    padding-bottom: 1.5rem;
     /* border: 2px solid red; */
 }
 
@@ -241,10 +242,12 @@ button {
 /* SECTION 1 =================================================== */
 
 .container-section-1 {
+    padding-top: 1.5rem;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding-bottom: 1.5rem;
 }
 
 .card-list {
@@ -257,22 +260,30 @@ button {
     font-family: "Bebas Neue", sans-serif;
     color: var(--sub-primary-text-color);
     /* border: 2px solid red; */
+    font-size: var(--step-3);
+    margin-bottom: 1rem;
 }
 
 .card {
+    /* border: 2px solid red; */
     flex-direction: column;
+
+    align-content: center;
+    justify-content: flex-start;
     max-width: 300px;
     /* border: 2px solid red; */
-        padding-right: min(1rem);
+    align-items: flex-start;
+    
 
 }
 
 .card-img {
     width: 100%;
-    border-radius: 25px;
-    max-height: 300px;
-    border: 2px solid var(--button-background-color);
+    border-radius: 15px;
+    border: 5px solid var(--button-background-color);
+    max-height: 250px;
     margin-bottom: 1rem;
+    
 }
 
 .card-description {
