--- a/styles/style.css
+++ b/styles/style.css
@@ -256,12 +256,13 @@ button {
     width: 100%;
 }
 
-.subtitle {
+.section-1-title {
     font-family: "Bebas Neue", sans-serif;
     color: var(--sub-primary-text-color);
     /* border: 2px solid red; */
     font-size: var(--step-3);
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .card {
@@ -292,7 +293,7 @@ button {
     margin-bottom: 1rem;
 }
 
-/* QUOTE ========================================================== */
+/* SECTION 2 ========================================================== */
 
 .container-section-2 {
     flex-direction: column;
@@ -314,4 +315,35 @@ button {
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+}
+
+/* SECTION 3 ============================================================== */
+
+.container:has(.container-section-3) {
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: var(--button-background-color);
+}
+
+
+.container-section-3 {
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: var(--button-background-color);
+}
+
+.section-3-title {
+    color: var(--secondary-text-color);
+    justify-content: center;
+    /* border: 2px solid red; */
+}
+
+.call-to-action {
+    flex-direction: column;
+    text-align: center;
+}
+
+.container-section-3 .sign-up-button {
+    border: 2px solid var(--primary-text-color);
+    width: 300px
 }
