--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,6 @@ button {
 
 .navbar {
     justify-content: space-between;
-    /* border: 2px solid red; */
     background-color: var(--primary-background-color);
 
 
@@ -105,15 +104,9 @@ button {
 .header-logo {
     align-self: center;
     color: var(--secondary-text-color);
-    /* border: 2px solid red; */
     font-family: "Bebas Neue", sans-serif;
     font-size: 1.75rem;
 }
-
-/* .header-logo.tertiary-font {
-    font-family: "Bebas Neue", sans-serif;
-} */
-
 
 .off-screen-menu {
     margin-top: 1rem;
@@ -130,8 +123,6 @@ button {
     background-color: var(--primary-background-color);
     padding: 2rem;
     border-radius: 10px;
-
-    /* border: 2px solid red; */
 }
 
 .off-screen-menu.active {
@@ -139,15 +130,12 @@ button {
 }
 
 .ham-menu {
-    /* border: 2px solid greenyellow; */
     height: 40px;
     width: 40px;
-
 }
 
 .ham-menu span {
     position: absolute;
-    /* border: 2px solid red; */
     height: 3px;
     width: 50px;
     color: white;
@@ -165,12 +153,6 @@ button {
     top: 75%;
 }
 
-/* .ham-menu.active span:nth-child(1) {
-    top: 50%;
-    transform: translate(-50%,-50%) rotate(45deg);
-    
-}
-
 .ham-menu.active span:nth-child(2) {
     opacity: 0;
 }
@@ -180,19 +162,15 @@ button {
     transform: translate(-50%, 50%) rotate(-45deg);
 } */
 
-/* .links {
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    height: 50%;
-    min-height: 6em;
-} */
-
 .link {
     color: var(--secondary-text-color);
     text-decoration: none;
     margin-top: 2rem;
+    line-height: 2rem;
+}
+
+.link:hover {
+    color:white
 }
 
 
@@ -204,24 +182,23 @@ button {
     align-items: center;
     margin-top: 0;
     padding-bottom: 1.5rem;
-    /* border: 2px solid red; */
 }
+
+.header-text-container {
+    flex-direction: column;
+}
+
 
 .header-title {
     color: var(--primary-text-color);
     text-align: center;
     justify-content: center;
-    /* border: 2px solid red; */
     margin-bottom: 1rem;
 }
 
-.header-image {
-    max-width: 100%;
-    margin-bottom: 1rem;
-}
 
 .header-p {
-    /* border: 2px solid red; */
+    flex-direction: column;
     margin-top: 0;
     justify-content: center;
     margin-bottom: 1.5rem;
@@ -239,6 +216,16 @@ button {
     padding: .75rem 0;
 }
 
+.header-image-1 {
+    max-width: 100%;
+    margin-bottom: 1rem;
+}
+
+.header-image-2 {
+    display: none;
+    width: 100%;
+}
+
 /* SECTION 1 =================================================== */
 
 .container-section-1 {
@@ -248,6 +235,7 @@ button {
     justify-content: center;
     flex-direction: column;
     padding-bottom: 1.5rem;
+    background-color: var(--primary-text-color);
 }
 
 .card-list {
@@ -259,20 +247,17 @@ button {
 .section-1-title {
     font-family: "Bebas Neue", sans-serif;
     color: var(--sub-primary-text-color);
-    /* border: 2px solid red; */
     font-size: var(--step-3);
     margin-bottom: 1rem;
     text-align: center;
 }
 
 .card {
-    /* border: 2px solid red; */
     flex-direction: column;
 
     align-content: center;
     justify-content: flex-start;
     max-width: 300px;
-    /* border: 2px solid red; */
     align-items: flex-start;
     
 
@@ -338,7 +323,6 @@ button {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 1rem;
-    /* border: 2px solid red; */
 }
 
 .call-to-action {
@@ -357,4 +341,111 @@ button {
     height:fit-content;
     justify-self: center;
     align-self: center;
+}   
+
+/* FOOTER ======================================================== */
+
+.footer {
+    flex-direction: column;
+    background-color: var(--primary-background-color);
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.references {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.footer-notes {
+    text-align: center; 
+}
+
+/* MEDIA QUERIES XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
+
+@media (min-width: 944px) {
+
+    .navbar {
+        justify-self: center;
+        
+        width: 80%;
+    }
+    
+    .container {
+        align-self: center;
+        justify-self: center;
+    }
+
+    #header {
+        max-width: 80%;
+    }
+
+    .header {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .header-image-1 {
+        display: none;
+    }
+
+    .header-image-2 {
+        display: flex;
+        max-width: 30%;
+    }
+
+    .header-text-container {
+        flex-direction: column;
+        width: 45%;
+    }
+
+    .header-title {
+        justify-content: start;
+        text-align: start;
+    }
+
+    .header-p {
+        text-align: start;
+    }
+
+    .container-section-1 {
+        width: 80%;
+    }
+
+    .container-section-2 {
+        width: 80%;
+    }
+
+    .card-list {
+        max-width: 899px;
+    }
+
+    .container:has(.container-section-3) {
+        padding: 2rem;
+        justify-content: center;
+    }
+
+    .container-section-3 {
+        border-radius: 15px;
+        padding: 1rem;
+        padding-top: 1.5rem;
+    }
+
+    .call-to-action {
+        width: 60%;
+    }
+
+    .footer {
+        width: 80%;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
+
+    .sign-up-button {
+        align-self: flex-start;
+        width: 100%;
+    }
+
+}
+
 }
